revised the test_pan file

--- a/Tests_PAN/01_tracing_source_code.ipynb
+++ b/Tests_PAN/01_tracing_source_code.ipynb
@@ -124,6 +124,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note, the continuous column will have two parts: the first is to transfrom using `tanh` to normalize and the second is to use the soeftmax. However, the discrete column will only have one parts like `[SpanInfo(dim=42, activation_fn='softmax')]` to indicate this is a discrete column with 42 unique categories."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Now, I plan to solely run the data transformer to check what it will return. See the section `Investigate the discrete_column_id` in the `Test_zone` for detail."
    ]
   },
@@ -168,101 +175,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "real_data = load_demo()\n",
-    "# Names of the columns that are discrete\n",
-    "discrete_columns = [\n",
-    "    'workclass',\n",
-    "    'education',\n",
-    "    'marital-status',\n",
-    "    'occupation',\n",
-    "    'relationship',\n",
-    "    'race',\n",
-    "    'sex',\n",
-    "    'native-country',\n",
-    "    'income'\n",
-    "]\n",
-    "\n",
-    "tsmr_test = DataTransformer()\n",
-    "tsmr_out = tsmr_test.fit(real_data, discrete_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[SpanInfo(dim=1, activation_fn='tanh'),\n",
-       "  SpanInfo(dim=10, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=9, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=1, activation_fn='tanh'),\n",
-       "  SpanInfo(dim=8, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=16, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=1, activation_fn='tanh'),\n",
-       "  SpanInfo(dim=10, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=7, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=15, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=6, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=5, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=2, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=1, activation_fn='tanh'),\n",
-       "  SpanInfo(dim=5, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=1, activation_fn='tanh'),\n",
-       "  SpanInfo(dim=3, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=1, activation_fn='tanh'),\n",
-       "  SpanInfo(dim=10, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=42, activation_fn='softmax')],\n",
-       " [SpanInfo(dim=2, activation_fn='softmax')]]"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tsmr_test.output_info_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[6]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# get the index of subset of lists in the orginal list\n",
-    "list_sub = [\"sex\"]  \n",
-    "\n",
-    "index = [discrete_columns.index(i) for i in list_sub]\n",
-    "index"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note, the continuous column will have two parts: the first is to transfrom using `tanh` to normalize and the second is to use the soeftmax. However, the discrete column will only have one parts like `[SpanInfo(dim=42, activation_fn='softmax')]` to indicate this is a discrete column with 42 unique categories."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -271,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +210,7 @@
     "]\n",
     "\n",
     "ctgan = CTGAN(epochs=50, cuda=True, verbose=True)\n",
-    "ctgan.fit(real_data, discrete_columns, user_specified_col=[\"sex\"])"
+    "ctgan.fit(real_data, discrete_columns, user_specified_col=[\"sex\",\"race\"])"
    ]
   },
   {
